--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,6 +125,9 @@
   background: #fff;
   padding: 20px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  width: 260px;
+  margin: 0 auto;
+  height: 330px;
 }
 
 .items-card img {
@@ -171,6 +174,72 @@
 
 .furniture-bottom {
   padding-bottom: 100px;
+}
+
+.sportswear {
+  margin-top: -220px;
+}
+
+.coupon {
+  border-radius: 8px;
+  background: #fff;
+  padding: 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  width: 300px;
+  margin: 0 auto;
+  height: 130px;
+}
+
+.coupon h1 {
+  color: #111;
+  font-size: 24px;
+  font-weight: 500;
+  margin-top: -80px;
+  text-align: left;
+}
+
+.coupon-area {
+  display: flex;
+  border-radius: 8px;
+  border: 1px solid rgba(17, 17, 17, 0.15);
+  background: #fff;
+  margin-top: -20px;
+}
+
+.coupon-area input {
+  padding: 0 5px;
+  font-size: 16px;
+  width: 180px;
+}
+
+.coupon-area .coupon-btn {
+  padding: 8px 15px;
+}
+
+.purchase-card {
+  border-radius: 8px;
+  border: 1px solid rgba(17, 17, 17, 0.15);
+  background: #fff;
+  margin-top: 20px;
+  padding: 10px;
+}
+
+.product-title p {
+  color: #111;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 48px;
+  text-align: left;
+  margin-left: 10px;
+}
+
+hr {
+  background: rgba(17, 17, 17, 0.15);
+  margin-bottom: 20px;
+}
+
+.product-price{
+  color: rgba(17, 17, 17, 0.50);
 }
 
 /* main section code end here */
