--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -249,6 +249,58 @@ hr {
 
 /* main section code end here */
 
+/* modal section code start here */
+.modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  text-align: center;
+  background: rgba(17, 17, 17, 0.4);
+}
+
+.modal-content {
+  max-width: 600px;
+  border: 1px solid rgba(17, 17, 17, 0.15);
+  background: #fff;
+  padding: 50px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.modal-content img {
+  width: 120px;
+  object-fit: contain;
+}
+
+.modal-content h1 {
+  color: #111;
+  font-size: 45px;
+  font-weight: 700;
+  margin: 10px 0;
+}
+
+.modal-content p {
+  color: rgba(17, 17, 17, 0.5);
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 30px;
+}
+
+.btn-homePage {
+  text-decoration: none;
+}
+
+/* hide show modal */
+.modal-show{
+  display: none;
+}
+/* modal section code end here */
+
 @media screen and (max-width: 1200px) {
   .product-container {
     max-width: 400px;
@@ -308,6 +360,15 @@ hr {
 @media screen and (max-width: 615px) {
   .item-container {
     grid-template-columns: 1fr;
+  }
+}
+@media screen and (max-width: 485px) {
+  .modal-content {
+    max-width: 320px;
+  }
+
+  .modal-content h1 {
+    font-size: 30px;
   }
 }
 @media screen and (max-width: 460px) {
