--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -261,14 +261,17 @@ hr {
 /* main section code end here */
 
 /* modal section code start here */
+
 .modal {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
   text-align: center;
-  background: rgba(17, 17, 17, 0.4);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
 }
 
 .modal-content {
@@ -307,9 +310,10 @@ hr {
 }
 
 /* hide show modal */
-.modal-show {
+#modal-hide {
   display: none;
 }
+
 /* modal section code end here */
 
 @media screen and (max-width: 1200px) {
